--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
     </div>
 
     <!-- Contact -->
-    <div class="section">
-      <h2>Contact</h2>
-      <p>Email is best: <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-      <p class="muted">I can provide a full PDF CV on request.</p>
-    </div>
+  <div class="section">
+  <h2>Contact</h2>
+  <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
+  <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+  <p class="muted">I can provide a full PDF CV on request.</p>
+</div>
   </main>
 </body>
 </html>
