--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="section">
       <h1>Hi, I’m Erin ✿</h1>
       <p>I’m a PhD student in Behavioural Neuroscience at the University of Toronto. 
-         I’m broadly interested in neuroepigenetics, chromatin biology, and how molecular changes relate to cognition and behaviour. 
+         I’m broadly interested in neuroepigenetics, chromatin biology, and how molecular changes relate to cognition, behaviour and the development of Alzheimer's Disease. 
          I also care deeply about teaching, mentorship, and making science welcoming for everyone.</p>
       <div>
         <a class="pill" href="cv.html">View CV</a>
