--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <a class="pill" href="volunteering.html">Volunteering</a>
         <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Email me</a>
         <a class="pill" href="https://github.com/erinstar">GitHub</a>
-        <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>
+        <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>        
+        <a class="pill" href="https://readingonastar.ca/">Blog</a>
       </div>
     </div>
 
