--- a/outreach.html
+++ b/outreach.html
@@ -1,33 +1,113 @@
-<div class="section">
-  <h1>Scientific Outreach and Communication</h1>
-  <p>Alongside research and teaching, I am committed to making science accessible, equitable, and engaging for audiences of all ages. 
-  I have developed and led outreach programs that reach K–12 classrooms, public audiences, and online communities. 
-  My work emphasizes mentorship, equity in STEM, and creating pathways for students who may not otherwise see themselves represented in science.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Outreach — Erin Ricaloglu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root{
+      --bg1:#fdfbfb; --bg2:#f3e7e9;
+      --ink:#333; --accent:#6a4c93; --accent-2:#d45d79;
+      --card:#ffffffdd; --line:#e8d6eb; --pill:#fce7f3; --sub:#6b7280;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:"Helvetica Neue", Arial, sans-serif;
+      background:linear-gradient(180deg,var(--bg1),var(--bg2));
+      color:var(--ink); line-height:1.7;
+    }
+    header{
+      position:sticky; top:0; z-index:10;
+      background:#fff0f5cc; backdrop-filter:blur(8px);
+      border-bottom:1px solid var(--line);
+    }
+    .nav{
+      max-width:1000px; margin:auto;
+      display:flex; align-items:center; gap:24px;
+      padding:14px 20px;
+    }
+    .nav a{ color:var(--accent); text-decoration:none; font-weight:500; transition:.15s }
+    .nav a:hover{ color:var(--accent-2) }
+    .spacer{ margin-left:auto; color:#a78bfa; font-size:.95rem }
 
-<div class="section">
-  <h2>Outreach & Mentorship</h2>
-  <ul>
-    <li><strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– )  
-      <p>Lead the University of Toronto Mississauga site, organizing STEM programs for schools and community organizations across the GTA. 
-      Recruit, train, and mentor over 100 student volunteers annually. 
-      Manage logistics and partnerships for flagship events such as <em>Science Rendezvous</em> and the <em>Let’s Talk Science Challenge</em>, collectively reaching more than 200 youth each year. 
-      Responsible for budgeting, program design, and ensuring equitable access for underserved schools.</p>
-    </li>
+    main{ max-width:900px; margin:40px auto; padding:0 20px }
+    .section{
+      background:var(--card);
+      border:1px solid var(--line);
+      border-radius:18px;
+      box-shadow:0 4px 12px rgba(0,0,0,.05);
+      padding:24px; margin-bottom:26px;
+    }
+    h1,h2{ margin:0 0 10px; color:var(--accent) }
+    p{ margin:8px 0 }
+    ul{ padding-left:20px; margin:0 }
+    li{ margin-bottom:18px }
+    .muted{ color:var(--sub) }
+  </style>
+</head>
+<body>
+  <header>
+    <nav class="nav">
+      <strong>Erin Ricaloglu</strong>
+      <a href="index.html">About</a>
+      <a href="cv.html">CV</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="volunteering.html">Volunteering</a>
+      <a href="projects.html">Projects</a>
+      <span class="spacer">University of Toronto</span>
+    </nav>
+  </header>
 
-    <li><strong>Sci High Graduate Communicator </strong>, GTA (2025)  
-      <p>Delivered interactive classroom talks on molecular biology, and genetics to high school students. Focused on making research concepts approachable, inspiring students to engage with university-level science, and encouraging equity and representation in STEM pathways.    </li>
+  <main>
+    <!-- Intro -->
+    <div class="section">
+      <h1>Scientific Outreach and Communication</h1>
+      <p>Alongside research and teaching, I am committed to making science accessible, equitable, and engaging for audiences of all ages. 
+      I have developed and led outreach programs that reach K–12 classrooms, public audiences, and online communities. 
+      My work emphasizes mentorship, equity in STEM, and creating pathways for students who may not otherwise see themselves represented in science.</p>
+    </div>
 
-    <li><strong>STEM Mentor</strong>, Letters to a Pre-Scientist (2024– )  
-      <p>Provide long-term mentorship to middle school students in underserved communities through pen-pal exchanges. 
-      Share stories of daily life as a researcher, advice on navigating educational pathways, and encouragement to pursue curiosity-driven science. 
-      Help students connect STEM to their own interests and goals, building confidence and representation in the sciences.</p>
-    </li>
+    <!-- Roles -->
+    <div class="section">
+      <h2>Outreach & Mentorship</h2>
+      <ul>
+        <li>
+          <strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– )  
+          <p>Lead the University of Toronto Mississauga site, organizing STEM programs for schools and community organizations across the GTA. 
+          Recruit, train, and mentor over 100 student volunteers annually. 
+          Manage logistics and partnerships for flagship events such as <em>Science Rendezvous</em> and the <em>Let’s Talk Science Challenge</em>, collectively reaching more than 200 youth each year. 
+          Responsible for budgeting, program design, and ensuring equitable access for underserved schools.</p>
+        </li>
 
-    <li><strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024– 
-      <p>Created accessible science communication materials to highlight equity issues in women’s health and reproductive justice. 
-      Produced infographics and social media content translating research for both academic and general audiences. 
-      Supported knowledge mobilization initiatives that promote diverse perspectives in health research and advocate for systemic change.</p>
-    </li>
-  </ul>
-</div>
+        <li>
+          <strong>Sci High Graduate Communicator</strong>, GTA (2025)  
+          <p>Delivered interactive classroom talks on molecular biology and genetics to high school students. 
+          Focused on making research concepts approachable, inspiring students to engage with university-level science, 
+          and encouraging equity and representation in STEM pathways.</p>
+        </li>
+
+        <li>
+          <strong>STEM Mentor</strong>, Letters to a Pre-Scientist (2024– )  
+          <p>Provide long-term mentorship to middle school students in underserved communities through pen-pal exchanges. 
+          Share stories of daily life as a researcher, advice on navigating educational pathways, and encouragement to pursue curiosity-driven science. 
+          Help students connect STEM to their own interests and goals, building confidence and representation in the sciences.</p>
+        </li>
+
+        <li>
+          <strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024–2025)  
+          <p>Created accessible science communication materials to highlight equity issues in women’s health and reproductive justice. 
+          Produced infographics and social media content translating research for both academic and general audiences. 
+          Supported knowledge mobilization initiatives that promote diverse perspectives in health research and advocate for systemic change.</p>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Contact -->
+    <div class="section">
+      <h2>Get in touch</h2>
+      <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+    </div>
+  </main>
+</body>
+</html>
