--- a/outreach.html
+++ b/outreach.html
@@ -53,7 +53,6 @@
       <a href="cv.html">CV</a>
       <a href="teaching.html">Teaching</a>
       <a href="outreach.html">Outreach</a>
-      <a href="volunteering.html">Volunteering</a>
       <a href="projects.html">Projects</a>
       <span class="spacer">University of Toronto</span>
     </nav>
@@ -90,14 +89,14 @@
         <li>
           <strong>STEM Mentor</strong>, Letters to a Pre-Scientist (2024– )  
           <p>Provide long-term mentorship to middle school students in underserved communities through pen-pal exchanges. 
-          Share stories of daily life as a researcher, advice on navigating educational pathways, and encouragement to pursue curiosity-driven science. 
+          Share stories of daily life as a researcher, offer advice on navigating educational pathways, and encourage the pursuit of curiosity-driven science. 
           Help students connect STEM to their own interests and goals, building confidence and representation in the sciences.</p>
         </li>
 
         <li>
           <strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024–2025)  
           <p>Created accessible science communication materials to highlight equity issues in women’s health and reproductive justice. 
-          Produced infographics and social media content translating research for both academic and general audiences. 
+          Produced infographics and social media content, translating research for both academic and general audiences. 
           Supported knowledge mobilization initiatives that promote diverse perspectives in health research and advocate for systemic change.</p>
         </li>
       </ul>
