--- a/cv.html
+++ b/cv.html
@@ -93,7 +93,7 @@
         <li><strong>Doctoral Researcher</strong>, University of Toronto (2025– )  
         Design and implement behavioural assays in rodent models, combined with molecular and genomic tools to study chromatin regulation of cognition and memory.</li>
         <li><strong>Research Fellow</strong>, CAMH (2025)  
-        Conducted independent project on postpartum depression using rodent models. Designed experiments, ran FST and maternal behaviour assays, performed immunohistochemistry. Presented poster at CAMH conference.</li>
+        Conducted independent project on postpartum depression using rodent models. Observed and scored FST and maternal behaviour assays, performed immunohistochemistry. Presented poster at CAMH conference.</li>
         <li><strong>Honours Thesis Researcher</strong>, McMaster University (2024–2025)  
         Developed agent-based models of biodiversity persistence in fragmented landscapes (NetLogo, Python). Presented findings at Ontario Biology Day, McMaster Symposium, and WISE Conference.</li>
         <li><strong>Undergraduate Research Assistant</strong>, McMaster University (2023–2024)  
@@ -107,8 +107,8 @@
       <h2>Teaching & Leadership</h2>
       <ul>
         <li><strong>Teaching Assistant & Invigilator</strong>, University of Toronto (2025– ) — tutorials, labs, grading, and exam support for PSY344 (Forensic Psych), PSY393 (Neuropsychology), PSY280 (Sensation & Perception), and PSY387 (Psychology of Music).</li>
-        <li><strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– ) — organize STEM programs for 20+ schools/communities; train and mentor 100+ volunteers; coordinate Science Rendezvous and Let’s Talk Science Challenge events reaching 200+ youth annually.</li>
-        <li><strong>Graduate Communicator</strong>, Sci High (2025) — delivered engaging neuroscience and biomedical research talks in high school classrooms across the GTA, promoting equity in STEM pathways.</li>
+        <li><strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– ) — organize STEM programs for 20+ schools/communities; train and mentor 100+ volunteers; coordinate Science Rendezvous and Let’s Talk Science Challenge events that reach 200+ youth annually.</li>
+        <li><strong>Graduate Communicator</strong>, Sci High (2025) — delivered engaging biomedical research talks in high school classrooms across the GTA alongside other graduate students, promoting equity in STEM pathways.</li>
       </ul>
     </div>
 
@@ -125,8 +125,9 @@
     <div class="section">
       <h2>Skills</h2>
       <ul>
-        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays, microscopy</li>
-        <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, basic bioinformatics (e.g. scRNA-seq training)</li>
+        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays, neuroimaging</li>
+        <li><strong>Animal Handling:</strong> (In training) Rodent Surgery, Colony Management, Primates </li>
+        <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, basic bioinformatics </li>
         <li><strong>Professional:</strong> teaching, mentoring, program coordination, science communication, outreach leadership</li>
       </ul>
     </div>
